--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -15,7 +15,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 50px 10px;
+    padding: 150px 10px;
     background: url('../Images/fond-compte.jpg') no-repeat;
     background-size: cover;
     background-position: center;
@@ -39,7 +39,7 @@ main {
 }
 
 .wrapper .input-box {
-    position: relative; /* Important pour le positionnement absolu de l'icône */
+    position: relative;
     width: 100%;
     height: 50px;
     margin: 30px 0;
@@ -55,22 +55,20 @@ main {
     border-radius: 40px;
     font-size: 16px;
     color: #fff;
-    /* IMPORTANT : Laissez de l'espace pour l'icône à droite */
-    padding: 20px 45px 20px 20px; /* Haut, Droite (45px pour l'icône), Bas, Gauche */
+    padding: 20px 45px 20px 20px;
 }
 
 .input-box input::placeholder {
-    color: #fff;
+    color: rgba(201, 186, 186, 0.549)
 }
 
-/* Styles pour les icônes Boxicons */
 .input-box i {
     position: absolute;
-    right: 15px; /* Positionne l'icône à 15px du bord droit */
-    top: 50%; /* Centre verticalement */
-    transform: translateY(-50%); /* Ajustement pour un centrage parfait */
-    font-size: 20px; /* Taille de l'icône */
-    color: #fff; /* Couleur de l'icône (ajustez si nécessaire) */
+    right: 15px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 20px;
+    color: #fff;
 }
 
 
@@ -85,8 +83,8 @@ main {
     color: #860000;
     border: 2px solid #860000;
     font-weight: 600;
-    display: block; /* S'assure que le bouton est un élément de bloc */
-    margin: 0 auto; /* Centre le bouton horizontalement */
+    display: block;
+    margin: 0 auto;
 }
 
 
